// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task-reducer should handle UPDATE_TASK_DUE_DATE 1`] = `
Array [
  Object {
    "dueDate": "2019-03-27T03:00:00.000Z",
    "taskIdentifier": 0,
  },
]
`;

exports[`task-reducer should handle UPDATE_TASK_PATIENT 1`] = `
Array [
  Object {
    "patient": Object {
      "patientIdentifier": 1,
    },
    "subtasks": Array [],
    "taskIdentifier": 0,
  },
]
`;
